--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -39,6 +39,12 @@
                   </div>
 
                 </form>
+                <!-- Pie de la tarjeta -->
+                <div class="card-footer text-center py-3">
+                  <div class="small">
+                    <a routerLink="/register" class="nav-link">¿Necesita una cuenta? Regístrese</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
