--- a/src/app/auth/containers/register/register.component.html
+++ b/src/app/auth/containers/register/register.component.html
@@ -5,38 +5,38 @@
         <div class="row justify-content-center">
           <div class="col-lg-7">
             <div class="card shadow-lg border-0 rounded-lg mt-5">
-              <div class="card-header"><h3 class="text-center font-weight-light my-4">Crear una cuenta</h3></div>
+              <div class="card-header"><h3 class="text-center font-weight-light my-4">Create Account</h3></div>
               <div class="card-body">
                 <form>
                   <div class="row mb-3">
                     <div class="col-md-6">
                       <div class="form-floating mb-3 mb-md-0">
                         <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" />
-                        <label for="inputFirstName">Nombres</label>
+                        <label for="inputFirstName">First name</label>
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-floating">
                         <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name" />
-                        <label for="inputLastName">Apellidos</label>
+                        <label for="inputLastName">Last name</label>
                       </div>
                     </div>
                   </div>
                   <div class="form-floating mb-3">
                     <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
-                    <label for="inputEmail">CorreoElectronico</label>
+                    <label for="inputEmail">Email address</label>
                   </div>
                   <div class="row mb-3">
                     <div class="col-md-6">
                       <div class="form-floating mb-3 mb-md-0">
                         <input class="form-control" id="inputPassword" type="password" placeholder="Create a password" />
-                        <label for="inputPassword">Contraseña</label>
+                        <label for="inputPassword">Password</label>
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-floating mb-3 mb-md-0">
                         <input class="form-control" id="inputPasswordConfirm" type="password" placeholder="Confirm password" />
-                        <label for="inputPasswordConfirm">Confirmar Contraseña</label>
+                        <label for="inputPasswordConfirm">Confirm Password</label>
                       </div>
                     </div>
                   </div>
