:sparkles: feat: Mejoras

--- a/src/app/admin/template/sidemenu/sidemenu.component.html
+++ b/src/app/admin/template/sidemenu/sidemenu.component.html
@@ -9,11 +9,11 @@
       </a>
       <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
         <nav class="sb-sidenav-menu-nested nav">
-          <a class="nav-link" routerLink="/usuarios"><i class="fas fa-tasks"></i> Gestión de ventas</a>
-          <a class="nav-link" routerLink="/productos"><i class="fas fa-cash-register"></i> Punto de venta</a>
+          <a class="nav-link" routerLink="/gestiondeventas"><i class="fas fa-tasks"></i> Gestión de ventas</a>
+          <a class="nav-link" routerLink="/puntodeventa"><i class="fas fa-cash-register"></i> Punto de venta</a>
         </nav>
       </div>
-      <a class="nav-link" href="charts.html">
+      <a class="nav-link" routerLink="productos">
         <div class="sb-nav-link-icon"><i class="fas fa-box"></i></div>
         Productos
       </a>
@@ -25,14 +25,14 @@
       <div class="collapse" id="collapsePages" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
         <nav class="sb-sidenav-menu-nested nav">
           <a class="nav-link" routerLink="/usuarios"><i class="fas fa-user"></i> Ver usuarios</a>
-          <a class="nav-link" routerLink="/productos"><i class="fas fa-user-plus"></i> Agregar usuarios</a>
+          <a class="nav-link" routerLink="/agregarusuario"><i class="fas fa-user-plus"></i> Agregar usuarios</a>
         </nav>
       </div>
-      <a class="nav-link" href="charts.html">
+      <a class="nav-link" routerLink="estadisticas">
         <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
         Estadísticas
       </a>
-      <a class="nav-link" href="charts.html">
+      <a class="nav-link" routerLink="historial">
         <div class="sb-nav-link-icon"><i class="fas fa-history"></i></div>
         Historial
       </a>
