:sparkles: feat: Página de usuarios

--- a/src/app/admin/pages/catalogos/agregarusuario/agregarusuario.component.html
+++ b/src/app/admin/pages/catalogos/agregarusuario/agregarusuario.component.html
@@ -1,60 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agregar Usuario</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-<div class="container">
-    <h2>Agregar Usuario</h2>
-    <form id="usuarioForm">
-        <div class="input-group">
-            <input id="nombre" type="text" required>
-            <label for="nombre">Nombre</label>
-        </div>
-
-        <div class="input-group">
-            <input id="apellido" type="text" required>
-            <label for="apellido">Apellido</label>
-        </div>
-
-        <div class="input-group">
-            <input id="correo" type="email" required>
-            <label for="correo">Correo</label>
-        </div>
-
-        <div class="input-group">
-            <input id="contraseña" type="password" required minlength="6">
-            <label for="contraseña">Contraseña</label>
-        </div>
-
-        <div class="input-group">
-            <input id="direccion" type="text" required>
-            <label for="direccion">Dirección</label>
-        </div>
-
-        <div class="input-group">
-            <input id="telefono" type="text" required pattern="[0-9]{10}" title="Debe ser un número de 10 dígitos">
-            <label for="telefono">Teléfono</label>
-        </div>
-
-        <div class="input-group">
-            <select id="rol" required>
-                <option value="" disabled selected></option>
-                <option value="servillito">Servillito</option>
-                <option value="cajero">Cajero</option>
-            </select>
-            <label for="rol">Rol</label>
-        </div>
-
-        <button type="submit">Agregar Usuario</button>
-    </form>
-</div>
-
-<script src="script.js"></script>
-</body>
-</html>
-
+<p>agregarusuario works!</p>
