--- a/src/app/admin/template/sidemenu/sidemenu.component.html
+++ b/src/app/admin/template/sidemenu/sidemenu.component.html
@@ -17,17 +17,10 @@
         <div class="sb-nav-link-icon"><i class="fas fa-box"></i></div>
         Productos
       </a>
-      <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
-        <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
+      <a class="nav-link" routerLink="usuarios">
+        <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
         Usuarios
-        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
       </a>
-      <div class="collapse" id="collapsePages" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
-        <nav class="sb-sidenav-menu-nested nav">
-          <a class="nav-link" routerLink="/usuarios"><i class="fas fa-user"></i> Ver usuarios</a>
-          <a class="nav-link" routerLink="/agregarusuario"><i class="fas fa-user-plus"></i> Agregar usuarios</a>
-        </nav>
-      </div>
       <a class="nav-link" routerLink="estadisticas">
         <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
         Estadísticas
@@ -43,3 +36,4 @@
     Start Bootstrap
   </div>
 </nav>
+
