--- a/src/app/admin/pages/catalogos/puntodeventa/puntodeventa.component.html
+++ b/src/app/admin/pages/catalogos/puntodeventa/puntodeventa.component.html
@@ -1,3 +1,4 @@
+<!--
 <div class="punto-de-venta mat-elevation-z8">
     <div class="encabezado">
       <h1>Abarrotes</h1>
@@ -70,4 +71,4 @@
         <button mat-raised-button color="primary">COBRAR</button>
       </div>
     </div>
-  </div>
+  </div>-->
