--- a/src/app/admin/pages/catalogos/dialogo-confirmacion/dialogo-confirmacion.component.html
+++ b/src/app/admin/pages/catalogos/dialogo-confirmacion/dialogo-confirmacion.component.html
@@ -1,9 +1,8 @@
 <h2 mat-dialog-title>Confirmar Eliminación</h2>
 <mat-dialog-content>
-  <p>¿Estás seguro de que deseas eliminar a <b>{{ data.nombre }}</b>?</p>
+  ¿Estás seguro de que deseas eliminar a {{ data.nombre }}?
 </mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button (click)="cancelar()">Cancelar</button>
-  <button mat-button color="warn" (click)="confirmar()">Eliminar</button>
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close>Cancelar</button>
+  <button mat-button color="warn" [mat-dialog-close]="true">Eliminar</button>
 </mat-dialog-actions>
-
