--- a/src/app/admin/pages/catalogos/usuario/usuario.component.html
+++ b/src/app/admin/pages/catalogos/usuario/usuario.component.html
@@ -14,7 +14,7 @@
   <!-- Encabezado con el botón alineado a la derecha -->
   <div class="header">
     <h2 class="mt-4">Lista de Usuarios</h2>
-    <a routerLink="/pages/agregarusuario" class="btn btn-success">
+    <a routerLink="/agregarusuario" class="btn btn-success">
       <i class="fas fa-plus"></i> Agregar Usuario
     </a>
   </div>
