--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-success" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">
-                <img src="assets/img/navbar-logo.svg" alt="Logo" height="40">
+                <img src="assets/img/imagen11.jpg" alt="Logo" height="80">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
