--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -15,6 +15,12 @@
   border-color: #01172e !important;
 }
 
+.navbar-brand img {
+  height: 80px; /* Ajusta según necesites */
+  width: auto; /* Mantiene la proporción */
+}
+
+
 .btn-success:hover {
   background-color: #022347 !important;
   border-color: #022347 !important;
