--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -35,14 +35,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#productos">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#team">Equipo</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
-                    <li class="nav-item"><a class="nav-link btn btn-light text-success px-3" href="/login">Ingresar</a></li>
+                    <li class="nav-item"><a class="nav-link text-teal" href="#productos">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link text-teal" href="#services">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link text-teal" href="#about">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link text-teal" href="#team">Equipo</a></li>
+                    <li class="nav-item"><a class="nav-link text-teal" href="#contact">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link btn text-white px-3" style="background-color: #48c6ef;" href="/login">Ingresar</a></li>
                 </ul>
-            </div>
+            </div>            
         </div>
     </nav>
 <!-- Carrousel -->
