Guardando cambios antes de actualizar Angular

--- a/src/app/admin/pages/catalogos/agregarusuario/agregarusuario.component.html
+++ b/src/app/admin/pages/catalogos/agregarusuario/agregarusuario.component.html
@@ -53,7 +53,8 @@
         </div>
 
         <!-- Botón de registro -->
-        <button (click)="registrarUsuario()" class="btn btn-primary mt-3 w-100">Registrar</button>
+        <button type="submit" class="btn btn-primary mt-3 w-100">Registrar</button>
+
     </form>
 
     <!-- Mensaje de error -->
