Cambio en el botón Nueva+

--- a/src/app/admin/pages/catalogos/gestiondeventas/gestiondeventas.component.html
+++ b/src/app/admin/pages/catalogos/gestiondeventas/gestiondeventas.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h2>Ventas</h2>
-    <button (click)="nuevaVenta()">Nueva +</button>
+    <button class="nueva-venta-button" (click)="nuevaVenta()">Nueva +</button>
 
     <table>
         <thead>
@@ -40,8 +40,8 @@
                 <p *ngIf="ventaSeleccionada"><strong>Fecha:</strong> {{ ventaSeleccionada?.fecha }}</p>
                 <p *ngIf="ventaSeleccionada"><strong>Total:</strong> ${{ ventaSeleccionada?.total }}</p>
 
-                <h3 *ngIf="ventaSeleccionada?.productos.length">Productos</h3>
-                <ul *ngIf="ventaSeleccionada?.productos.length">
+                <h3 *ngIf="ventaSeleccionada?.productos?.length > 0">Productos</h3>
+                <ul *ngIf="ventaSeleccionada?.productos?.length > 0">
                     <li *ngFor="let producto of ventaSeleccionada?.productos">
                         {{ producto.cantidad }}x {{ producto.nombre }} - ${{ producto.precio }}
                     </li>
