--- a/src/app/admin/pages/catalogos/gestiondeventas/gestiondeventas.component.css
+++ b/src/app/admin/pages/catalogos/gestiondeventas/gestiondeventas.component.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
@@ -63,6 +62,17 @@ button img {
   vertical-align: middle;
 }
 
+/* Botón de Nueva Venta */
+.nueva-venta-button {
+  background-color: #28a745; /* Verde */
+  color: white;
+}
+
+.nueva-venta-button:hover {
+  background-color: #218838; /* Verde más oscuro */
+}
+
+/* Botón de Eliminar */
 .eliminar-button {
   background-color: #ff4d4d;
   color: white;
