--- a/src/app/admin/template/sidemenu/sidemenu.component.html
+++ b/src/app/admin/template/sidemenu/sidemenu.component.html
@@ -1,39 +1,38 @@
 <nav class="sb-sidenav accordion custom-sidenav" id="sidenavAccordion">
-  <div class="sb-sidenav-menu">
-    <div class="nav">
-      <div class="sb-sidenav-menu-heading">Catálogos</div>
-      <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
-        <div class="sb-nav-link-icon"><i class="fas fa-shopping-cart"></i></div>
-        Ventas
-        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-      </a>
-      <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
-        <nav class="sb-sidenav-menu-nested nav">
-          <a class="nav-link" routerLink="/gestiondeventas"><i class="fas fa-tasks"></i> Gestión de ventas</a>
-          <a class="nav-link" routerLink="/puntodeventa"><i class="fas fa-cash-register"></i> Punto de venta</a>
-        </nav>
-      </div>
-      <a class="nav-link" routerLink="productos">
-        <div class="sb-nav-link-icon"><i class="fas fa-box"></i></div>
-        Productos
-      </a>
-      <a class="nav-link" routerLink="usuarios">
-        <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
-        Usuarios
-      </a>
-      <a class="nav-link" routerLink="estadisticas">
-        <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
-        Estadísticas
-      </a>
-      <a class="nav-link" routerLink="historial">
-        <div class="sb-nav-link-icon"><i class="fas fa-history"></i></div>
-        Historial
-      </a>
+    <div class="sb-sidenav-menu">
+        <div class="nav">
+            <div class="sb-sidenav-menu-heading">Catálogos</div>
+            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                <div class="sb-nav-link-icon"><i class="fas fa-shopping-cart"></i></div>
+                Ventas
+                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+            </a>
+            <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                <nav class="sb-sidenav-menu-nested nav">
+                    <a class="nav-link" routerLink="/admin/gestiondeventas"><i class="fas fa-tasks"></i> Gestión de ventas</a>
+                    <a class="nav-link" routerLink="/admin/puntodeventa"><i class="fas fa-cash-register"></i> Punto de venta</a>
+                </nav>
+            </div>
+            <a class="nav-link" routerLink="productos">
+                <div class="sb-nav-link-icon"><i class="fas fa-box"></i></div>
+                Productos
+            </a>
+            <a class="nav-link" routerLink="usuarios">
+                <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
+                Usuarios
+            </a>
+            <a class="nav-link" routerLink="estadisticas">
+                <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
+                Estadísticas
+            </a>
+            <a class="nav-link" routerLink="historial">
+                <div class="sb-nav-link-icon"><i class="fas fa-history"></i></div>
+                Historial
+            </a>
+        </div>
     </div>
-  </div>
-  <div class="sb-sidenav-footer">
-    <div class="small">Logged in as:</div>
-    Start Bootstrap
-  </div>
+    <div class="sb-sidenav-footer">
+        <div class="small">Logged in as:</div>
+        Start Bootstrap
+    </div>
 </nav>
-
